# instant-models

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: generate.rs
src/: column.rs  lib.rs  select.rs  struct_builder.rs  table.rs  types.rs
src/sql/: field.rs  mod.rs  query.rs  table.rs
tests/: accounts.rs  basic.rs  format.rs  join.rs  orm.rs
tests/basic/: testfile.rs
