[package]
name = "instant-models"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"
required-features = ["postgres", "clap"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"], optional = true }
heck = "0.4.0"
indexmap = "2"
postgres = { version = "0.19.3", optional = true }
postgres-types = { version = "0.2.3", features = ["derive"] }
thiserror = "1.0.31"
time = { version = "0.3.9", features = ["parsing"] }

[dev-dependencies]
chrono = "0.4"
postgres = { version = "0.19.3", features = ["with-chrono-0_4", ] }
tempfile = "^3.3.0"

[features]
default = ["postgres", ]
