[package]
name = "instant-models"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "Apache-2.0 OR MIT"

[features]
default = ["postgres"]
postgres = ["tokio-postgres"]

[dependencies]
anyhow = "1"
heck = "0.4.0"
indexmap = "2"
thiserror = "1.0.31"
time = { version = "0.3.9", features = ["parsing"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"], optional = true }

[dev-dependencies]
chrono = "0.4"
tempfile = "3.3"
