[package]
name = "instant-models"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = "1"
heck = "0.4.0"
indexmap = "2"
postgres = { version = "0.19.3", optional = true }
postgres-types = { version = "0.2.3", features = ["derive"] }
thiserror = "1.0.31"
time = { version = "0.3.9", features = ["parsing"] }

[dev-dependencies]
chrono = "0.4"
postgres = { version = "0.19.3", features = ["with-chrono-0_4"] }
tempfile = "3.3"

[features]
default = ["postgres"]
